# DocuFlow

./: .gitignore  .mcp.json  AUDIT_REPORT.md  CLAUDE.md  LICENSE  README.md  README.zh-CN.md  image_gen_config.example.json  install.py  install_codex.py  pyproject.toml  test_converter.py  test_day10_11.py  test_day3.py  test_day6_7.py  test_day8_9.py  test_document.py  test_excel.py  test_final_integration.py  test_html_convert.py  test_html_convert_standalone.py  test_middleware.py  test_new_features.py  test_ocr.py  test_pdf.py  test_performance_benchmark.py  test_ppt.py
.claude/: settings.local.json
.claude/agents/: CLAUDE.md  ppt-slide-generator.md
.claude/commands/: doc-convert.md  excel-dashboard.md  ocr-extract.md  pdf-toolkit.md  ppt-slide-generator.md  report-generator.md
scripts/: 01_excel_wb_leak.py  02_makedirs_exist_ok.py  03_test_add_asserts.py  04_test_add_asserts_v2.py  05_test_remove_returns.py  add_decorators.py
src/docuflow_mcp/: __init__.py  document.py  server.py  tools.py
src/docuflow_mcp/core/: __init__.py  config.py  middleware.py  registry.py
src/docuflow_mcp/extensions/: __init__.py  advanced.py  batch.py  converter.py  excel.py  html_to_pptx.py  image_gen.py  ocr.py  pdf.py  ppt.py  styles.py  templates.py  validator.py
src/docuflow_mcp/utils/: __init__.py  deps.py  formatters.py  paths.py
templates/: presets.json
tests/: conftest.py  test_absolute_convert.py  test_converter.py  test_day10_11.py  test_day3.py  test_day6_7.py  test_day8_9.py  test_document.py  test_excel.py  test_final_integration.py  test_html_convert_standalone.py  test_middleware.py  test_new_features.py  test_ocr.py  test_pdf.py  test_ppt.py  verify_format.py
