[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docuflow-mcp"
version = "1.0.0"
description = "All-in-one MCP server for document processing (Word/Excel/PPT/PDF/OCR) - 全能文档处理 MCP 服务器"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "DocuFlow Team"}
]
keywords = [
    "mcp",
    "word", "excel", "powerpoint", "pdf",
    "docx", "xlsx", "pptx",
    "document", "ocr",
    "claude", "ai"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Office Suites",
    "Topic :: Text Processing :: Markup",
]

dependencies = [
    "mcp>=1.0.0",
    "python-docx>=1.1.0",
    "python-pptx>=0.6.23",
    "openpyxl>=3.1.5",
    "pypdf>=3.18.0",
    "pdfplumber>=0.10.0",
    "Pillow>=10.0.0",
    "lxml>=4.9.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.scripts]
docuflow-mcp = "docuflow_mcp.server:run"

[project.urls]
Homepage = "https://github.com/docuflow/docuflow-mcp"
Documentation = "https://github.com/docuflow/docuflow-mcp#readme"
Repository = "https://github.com/docuflow/docuflow-mcp"
Issues = "https://github.com/docuflow/docuflow-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/docuflow_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["."]
